# TombaAqui

./: .gitignore  LICENSE  app.py  depends.py  pyproject.toml
modules/company/: controller.py  dao.py  modelo.py
modules/department/: controller.py  dao.py  modelo.py
modules/equipment/: controller.py  dao.py  modelo.py  schemas.py
modules/equipment_movement/: controller.py  dao.py  modelo.py
service/: connect.py
