[tool.poetry]
name = "tombaaqui"
version = "0.1.0"
description = ""
authors = ["JonasR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"
httpx = "^0.27.0"
sqlalchemy-utils = "^0.41.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
